<resources>
    <string name="app_name">AndroidSeminar1</string>

    <!--signin page-->

    <string name="sopthub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="input_id">아이디를 입력해주세요</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="signup">회원가입</string>

    <!--signup page-->
    <string name="name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="sign_complete">회원가입 완료</string>

    <!--home_activity-->
    <string name="kimdaeho">김대호</string>
    <string name="age">나이</string>
    <string name="old">23</string>
    <string name="mbti">MBTI</string>
    <string name="entj">ENTJ</string>
    <string name="introduce">Kotlin으로 안드로이드 개발을 시작해 설랩니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--foll0ow-layout-->

    <string name="btn_follow">팔로워\n목록</string>
    <string name="btn_repo">레포지토리\n목록</string>


    <string name="android_repo">안드로이드 과제\n 레포지토리</string>
    <string name="ios_repo">iOS 과제\n 레포지토리</string>
    <string name="server_repo">서버 과제\n 레포지토리</string>
    <string name="wab_repo">웹 과제\n 레포지토리</string>

</resources>